--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Making a scroll view so that when more entrys are present. user can scroll down the llst -->
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,10 +9,12 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
+    <!-- Start of linear layout for the whole page-->
     <LinearLayout
         android:orientation="vertical"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
+        <!-- Create a relative layout that will contain the information at the top of the screen -->
         <RelativeLayout
             android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
@@ -39,16 +42,17 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"/>
         </RelativeLayout>
+        <!-- End of the top of the screen layout-->
+        <!-- Begin grid layout that will contain all of the buttons for the user-->
         <GridLayout
             android:columnCount="2"
             android:rowCount="7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnOrderPreserved="false"
-            android:alignmentMode="alignMargins"
-            >
+            android:alignmentMode="alignMargins">
 
-
+            <!-- First entry on grid. work from home -->
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -60,7 +64,8 @@
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:background="@null"></Button>
+                    android:background="@null"
+                    android:id="@+id/workFromHome"/>
                     <LinearLayout
                     android:orientation="vertical"
                     android:padding="16dp"
@@ -73,12 +78,14 @@
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Work from home"
+                        android:text="Work at home"
                         android:textSize="16sp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+            <!-- End of Work From Home entry -->
+            <!-- Start of computing entry -->
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,7 +97,8 @@
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:background="@null"></Button>
+                    android:background="@null"
+                    android:id="@+id/computerScience"/>
                 <LinearLayout
                     android:orientation="vertical"
                     android:padding="16dp"
@@ -103,14 +111,15 @@
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Computer Science"
+                        android:text="Computing"
                         android:textSize="16sp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+            <!-- End of computing entry -->
 
-
+            <!-- Start of accountancy entry -->
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -122,7 +131,8 @@
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:background="@null"></Button>
+                    android:background="@null"
+                    android:id="@+id/accountancyFinance"/>
                 <LinearLayout
                     android:orientation="vertical"
                     android:padding="16dp"
@@ -130,17 +140,52 @@
                     android:layout_height="match_parent"
                     android:layout_width="match_parent">
                     <ImageView
-                        android:src="@drawable/workathome"
+                        android:src="@drawable/accounting"
                         android:layout_width="80dp"
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Work from home"
+                        android:text="Accountancy "
                         android:textSize="16sp"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+            <!-- End of accountancy entry -->
+            <!-- Start of Engineering entry -->
+            <android.support.v7.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="60dp"
+                app:cardCornerRadius="10dp"
+                android:layout_margin="12dp">
+                <Button
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:background="@null"
+                    android:id="@+id/constructionEngineering"/>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
+                    <ImageView
+                        android:src="@drawable/construction"
+                        android:layout_width="80dp"
+                        android:layout_height="90dp"
+                        android:background="@null"/>
+                    <TextView
+                        android:text="Engineering"
+                        android:textSize="16sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+            <!-- End of Engineering entry -->
+
         </GridLayout>
     </LinearLayout>
 </ScrollView>
