--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,15 @@
                 android:text="Find new Jobs"
                 android:textSize="26sp"
                 android:textColor="#FFFFFF"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_below="@+id/title"
-                android:text="          Click an area to view jobs"
-                android:textSize="14sp"
+                android:paddingLeft="50dp"
+                android:text="Click an area to view jobs"
+                android:textStyle="bold"
+                android:textSize="16sp"
                 android:textColor="#FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -50,7 +53,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnOrderPreserved="false"
-            android:alignmentMode="alignMargins">
+            android:alignmentMode="alignMargins"
+            android:paddingTop="20dp">
 
             <!-- First entry on grid. work from home -->
             <android.support.v7.widget.CardView
@@ -58,13 +62,15 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
-                app:cardElevation="60dp"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:outlineSpotShadowColor="@color/trans"
+                android:outlineAmbientShadowColor="@color/trans"
+                app:cardBackgroundColor="#88FFFFFF">
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
-                    android:background="@null"
+                    android:background="@color/trans"
                     android:id="@+id/workFromHome"/>
                     <LinearLayout
                     android:orientation="vertical"
@@ -78,10 +84,12 @@
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Work at home"
-                        android:textSize="16sp"
+                        android:text="Work from home"
+                        android:textSize="18sp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_800"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <!-- End of Work From Home entry -->
@@ -91,9 +99,12 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
-                app:cardElevation="60dp"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:outlineSpotShadowColor="@color/trans"
+                android:outlineAmbientShadowColor="@color/trans"
+                app:cardBackgroundColor="#88FFFFFF"
+                >
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
@@ -112,9 +123,11 @@
                         android:background="@null"/>
                     <TextView
                         android:text="Computing"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_800"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <!-- End of computing entry -->
@@ -125,9 +138,11 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
-                app:cardElevation="60dp"
                 app:cardCornerRadius="12dp"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:outlineSpotShadowColor="@color/trans"
+                android:outlineAmbientShadowColor="@color/trans"
+                app:cardBackgroundColor="#88FFFFFF">
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
@@ -145,10 +160,12 @@
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Accountancy "
-                        android:textSize="16sp"
+                        android:text="Data Analytics"
+                        android:textSize="18sp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_800"/>
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <!-- End of accountancy entry -->
@@ -158,9 +175,11 @@
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
-                app:cardElevation="60dp"
                 app:cardCornerRadius="10dp"
-                android:layout_margin="12dp">
+                android:layout_margin="12dp"
+                android:outlineSpotShadowColor="@color/trans"
+                android:outlineAmbientShadowColor="@color/trans"
+                app:cardBackgroundColor="#88FFFFFF">
                 <Button
                     android:layout_height="match_parent"
                     android:layout_width="match_parent"
@@ -178,10 +197,13 @@
                         android:layout_height="90dp"
                         android:background="@null"/>
                     <TextView
-                        android:text="Engineering"
+                        android:text="Software Engineer"
                         android:textSize="16sp"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textColor="@color/grey_800"
+                        />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
             <!-- End of Engineering entry -->
