--- a/app/src/main/res/drawable/backshape.xml
+++ b/app/src/main/res/drawable/backshape.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <corners
         android:radius="4dp"
         />
     <solid
-        android:color="#AA4F4F4F"
+        android:color="#88FFFFFF"
         />
     <padding
         android:left="0dp"
@@ -17,7 +19,7 @@
         android:height="40dp"
         />
     <stroke
-        android:width="3dp"
-        android:color="#AA878787"
+        android:width="1dp"
+        android:color="#AAFFFFFF"
         />
 </shape>
