--- a/app/src/main/res/layout/activity_grad_job.xml
+++ b/app/src/main/res/layout/activity_grad_job.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Making a scroll view so that when more entrys are present. user can scroll down the llst -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- Making a scroll view so that when more entrys are present. user can scroll down the llst -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,58 +8,87 @@
     tools:context=".GradJobActivity">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:orientation="vertical">
         <!-- Create a relative layout that will contain the information at the top of the screen -->
         <RelativeLayout
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingBottom="20dp"
-            android:layout_height="150dp"
+            android:id="@+id/topbar"
             android:layout_width="match_parent"
-            android:id="@+id/topbar">
+            android:layout_height="150dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="20dp"
+            android:paddingBottom="20dp">
+
             <ImageView
-                android:src="@drawable/ic_baseline_keyboard_backspace_24"
-                android:layout_height="30dp"
-                android:layout_width="70dp" />
-            <Button
-                android:layout_height="30dp"
                 android:layout_width="70dp"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_baseline_keyboard_backspace_24" />
+
+            <Button
+                android:id="@+id/home1"
+                android:layout_width="70dp"
+                android:layout_height="30dp"
                 android:background="@drawable/backshape"
-                android:id="@+id/home1"/>
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
 
             <TextView
-                android:layout_marginTop="20dp"
-                android:layout_below="@+id/home1"
-                android:layout_toLeftOf="@+id/logo"
                 android:id="@+id/title"
-                android:text="Graduate Software Developer"
-                android:textSize="20sp"
-                android:textColor="#FFFFFF"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"/>
+                android:layout_below="@+id/home1"
+                android:layout_marginTop="20dp"
+                android:layout_toLeftOf="@+id/logo"
+                android:text="Graduate Software Developer"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
             <View
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
                 android:layout_height="3dp"
                 android:layout_below="@+id/logo"
-                android:background="@color/yellow_A700"/>
-            <ImageView
-                android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/eshopworld"
+                android:background="@color/yellow_A700" />
+
+            <ImageView
+                android:id="@+id/logo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:id="@+id/logo">
-            </ImageView>
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/eshopworld"/>
 
         </RelativeLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/home1"
+                    android:layout_marginTop="20dp"
+                    android:layout_toLeftOf="@+id/logo"
+                    android:text="Graduate Software Developer"
+                    android:textColor="#FFFFFF"
+                    android:textSize="200sp"/>
+                <fragment
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    tools:context=".GradJobActivity" />
+            </LinearLayout>
+
+        </ScrollView>
 
     </LinearLayout>
+
 </LinearLayout>
